# glacier-alarmclock

./: CMakeLists.txt  glacier-alarmclock.desktop
src/: CMakeLists.txt  main.cpp
src/qml/: glacier-alarmclock.qml  glacier-alarmclock.qrc
src/qml/pages/: AddAlarmPage.qml  MainPage.qml  SettingsPage.qml
translations/: glacier-alarmclock.ts  glacier-alarmclock_ar.ts  glacier-alarmclock_cs.ts  glacier-alarmclock_de.ts  glacier-alarmclock_pl.ts  glacier-alarmclock_ru.ts
